--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #fafafa;
+}
+
+@media (min-width: 768px) {
+  .form-logo-image {
+    width: 200px;
+    height: 279px;
+  }
+}
